--- a/css/index.css
+++ b/css/index.css
@@ -58,7 +58,7 @@ a:hover{
 	margin-bottom:10px;
 }
 
-.biography-sect h6, .projects-sect h6, .services-sect h6 , .awards-sect h6, .attach-sect h6{
+.biography-sect h6, .projects-sect h6, .news-sect h6, .services-sect h6, .awards-sect h6, .attach-sect h6{
 	color:#009faa;
 	
 }
